--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "wurser",
-    "repositoryName": "wurser.github.io",
-    "branch": "master"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"wurser","repositoryName":"wurser.github.io","branch":"master"},"site":{"title":"Simplemente Programación","url":"https://wurser.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"//wurser.github.io/themes/Casper"}}
